fixing row spacing

--- a/simple-filter-demo/assets/stylesheets/css/custom.css
+++ b/simple-filter-demo/assets/stylesheets/css/custom.css
@@ -18,3 +18,7 @@ div.init-card h3 {
 div.init-card p {
   text-align: left
 }
+
+.card-row {
+  margin-bottom: 5rem;
+}
